--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<head>
 <link rel="icon" href="photo/220px-Kurukshetra_University_logo - Copy.png" size="32x32"/>
 <title>UIET ALUMNI</title>
 
-<meta name="robots" content="follow, index" /> 
-<meta name="revisit-after" content="1 day" />
-<meta name="distribution" content="Global" /> 
-<meta name="Language" content="en" />  
+
 <meta name="viewport" content="width=device-width; initial-scale = 1.0; maximum-scale=1.0; user-scalable=no" />
-<meta name="google-site-verification" content="Ob0v6hn2rAI56yd99q8xh8SbrGbB-mv0V2DUNwMdR6I" /> 
 <link rev="made" href="mailto:info@singhaniauniversity.co.in" /> 
 <link href="https://singhaniauniversity.co.in/mainweb/styles/bootstrap.min.css" rel="stylesheet" />
 <link href="https://singhaniauniversity.co.in/mainweb/styles/font-awesome.min.css" rel="stylesheet" />
