--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html >
 <head>
 <link rel="icon" href="photo/220px-Kurukshetra_University_logo - Copy.png" size="32x32"/>
 <title>UIET ALUMNI</title>
 
 
 <meta name="viewport" content="width=device-width; initial-scale = 1.0; maximum-scale=1.0; user-scalable=no" />
-<link rev="made" href="mailto:info@singhaniauniversity.co.in" /> 
 <link href="https://singhaniauniversity.co.in/mainweb/styles/bootstrap.min.css" rel="stylesheet" />
 <link href="https://singhaniauniversity.co.in/mainweb/styles/font-awesome.min.css" rel="stylesheet" />
 <link href="https://singhaniauniversity.co.in/mainweb/styles/animate.css" rel="stylesheet"/>
